--- a/Practica1/WEBGUI/Web.config
+++ b/Practica1/WEBGUI/Web.config
@@ -18,4 +18,8 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="constr" connectionString="Server=localhost;Database=practica1;Uid=isw;Pwd=1234;" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+
 </configuration>
