--- a/Practica2/WebGUI/Web.config
+++ b/Practica2/WebGUI/Web.config
@@ -18,4 +18,7 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="constr" connectionString="Server=localhost;Database=practica2;Uid=isw;Pwd=1234;" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
 </configuration>
